# WASM-Audioworklet

native/: .clang-format  CMakeLists.txt
native/src/: Sine.c  Sine.h  postjs.js  prejs.js
web/: package.json
web/src/: App.js
web/src/wasm/: Audio.js  AudioWorklet.js  Sine.js
